# Am-I-Available

./: .env.local  .env.prod  .gitignore  .prettierignore  .prettierrc  CALENDAR_API_DOCUMENTATION.md  DESIGN.md  FEATURES.md  README.md  REDUX_MIGRATION_SUMMARY.md  TODO.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  start.sh  vite.config.ts
.cursor/rules/: python.mdc  react.mdc
.github/workflows/: app-deploy.yml  build.yml  deploy.yml  terraform-apply.yml  terraform-plan.yml
.storybook/: main.ts  preview.css  preview.ts
api/: dependencies.py  main.py
api/api_files/: get_token.html
api/core/: amia.py  calendar.py
api/databridge/: event_request_approvals_databridge.py  event_requests_databridge.py  notifications_databridge.py  relationship_metadata_databridge.py  relationship_requests_databridge.py  relationships_databridge.py  user_token_databridge.py
api/proxy/: google_client.py  google_proxy.py
api/services/: emails_service.py  event_request_approvals_service.py  event_requests_service.py  events_service.py  google_calendar_service.py  google_events_service.py  llm_service.py  notifications_service.py  relationship_metadata_service.py  relationship_requests_service.py  (+1 more)
client/: index.html
docker/: Dockerfile  lambda.Dockerfile
mobile/: App.tsx  INFRASTRUCTURE_SETUP.md  README.md  app.json  package-lock.json  package.json
scripts/: deploy.sh
supabase/: config.toml
terraform/: api_gateway.tf  cdn.tf  config.tf  ecr.tf  email_forwarder.py  lambda.tf  locals.tf  openai.tf  s3.tf  ses.tf  variables.tf
(+315 files in other folders)
