[project]
name = "am-i-available"
version = "0.1.0"
description = "Am I Available web application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "google>=3.0.0",
    "google-api-python-client>=2.181.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "jwt>=1.3.1",
    "openai>=1.84.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",
    "supabase>=2.15.2",
    "uvicorn[standard]",
]

[project.scripts]
dev-api = "uvicorn api.main:app --reload --host 0.0.0.0 --port 8000"

[dependency-groups]
dev = [
    "black>=25.1.0",
]
